# OrthoSec

./: .dockerignore  .env.example  .gitignore  .orthosec.example.yml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  VALIDATION.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  orthosec.yml  pages.yml  release.yml
benchmark/: README.md  manifest.json  manifest_adversarial.json  run.py
benchmark/adversarial/: adv_eval_non_llm.py  adv_injection_as_data.py  adv_load_maplocation.py  adv_output_helper.py  adv_output_innerhtml.js  adv_output_reassign.py  adv_prompt_format.py  adv_prompt_helper.py  adv_prompt_no_user.py  adv_prompt_reassign.py  adv_secret_concat.py  adv_subprocess_no_tool.py  adv_tool_far_sink.py  adv_tool_helper.py
benchmark/cases/: clean_1.py  clean_2.py  llm01_pos_1.py  llm01_pos_2.py  llm01_safe_1.py  llm01_safe_2.py  llm02_pos_1.py  llm02_pos_2.py  llm02_safe_1.py  llm02_safe_2.py  llm03_pos_2.py  llm03_safe_1.py  llm04_pos_1.py  llm04_pos_2.py  llm04_safe_1.py  llm04_safe_2.py  llm05_pos_1.py  llm05_pos_2.py  llm05_safe_1.py  llm05_safe_2.py  llm06_pos_1.py  llm06_pos_2.py  llm06_safe_1.py  llm06_safe_2.py  llm07_pos_1.py  llm07_pos_2.py  llm07_safe_1.py  llm07_safe_2.py  llm08_pos_1.py  llm08_pos_2.py  llm08_safe_1.py  llm08_safe_2.py  llm09_pos_1.py  llm09_pos_2.py  llm09_safe_1.py  llm09_safe_2.py  llm10_pos_1.py  llm10_pos_2.py  llm10_safe_1.py  llm10_safe_2.py  (+4 more)
examples/vulnerable-agent/: agent.py
orthosec/: __init__.py  cli.py  config.py  profiles.py  proxy.py  remediation.py  remediation_fix.py  schedule.py  sdk.py
orthosec/analysis/: __init__.py  _interproc.py  csharp_ast.py  go_ast.py  java_ast.py  js_ast.py  kotlin_ast.py  php_ast.py  project.py  pyast.py  ruby_ast.py  ts_ast.py
orthosec/core/: finding.py  scanner.py  scoring.py  taxonomy.py
orthosec/detectors/: __init__.py  _signals.py  data_poisoning.py  dependency_audit.py  misinformation.py  output_handling.py  prompt_hardening.py  prompt_leakage.py  rag_trust.py  secrets.py  tool_exposure.py  unbounded_consumption.py  unsafe_model_load.py
orthosec/intel/: __init__.py  autofix.py  business_risk.py  compliance.py  narrative.py
orthosec/report/: console.py  html.py  sarif.py
sdk/js/: README.md  index.d.ts  index.js  package.json
sdk/js/test/: guard.test.js
tests/: test_analysis.py  test_benchmark.py  test_crossfile.py  test_csharp_ast.py  test_detectors.py  test_env_report.py  test_features.py  test_go_ast.py  test_java_ast.py  test_js_ast.py  test_kotlin_ast.py  test_php_ast.py  test_precision.py  test_precision_071.py  test_proxy.py  test_ruby_ast.py  test_schedule.py  test_suppression.py  test_tier1.py  test_tier2.py  test_ts_ast.py
