[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orthosec"
version = "0.7.1"
description = "The AI Security Architect — technical AI risk analysis with executive business context. Open source."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "OrthoSec" }]
keywords = ["ai-security", "llm-security", "ai-spm", "owasp-llm", "mitre-atlas", "ai-governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core scan + report path is STDLIB ONLY — installs and runs with zero deps.
dependencies = []

[project.optional-dependencies]
# Executive narrative / free-form Q&A layer (grounded on deterministic findings).
intel = ["anthropic>=0.40"]
# Prettier console output; core falls back to plain text without it.
pretty = ["rich>=13"]
# Precise JavaScript (.js) analysis via AST; without [ts], TS/JSX falls back to regex.
js = ["esprima>=4.0"]
# Precise TypeScript / JSX (.ts/.tsx/.jsx) analysis via tree-sitter.
ts = ["tree-sitter>=0.21", "tree-sitter-typescript>=0.21"]
dev = ["pytest>=8", "anthropic>=0.40", "rich>=13", "esprima>=4.0",
       "tree-sitter>=0.21", "tree-sitter-typescript>=0.21"]

[project.scripts]
orthosec = "orthosec.cli:main"

[project.urls]
Homepage = "https://github.com/cloudivian-org/OrthoSec"
Repository = "https://github.com/cloudivian-org/OrthoSec"
Issues = "https://github.com/cloudivian-org/OrthoSec/issues"
Changelog = "https://github.com/cloudivian-org/OrthoSec/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["orthosec*"]

[tool.setuptools.package-data]
orthosec = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
