[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orthosec"
version = "0.8.2"
description = "The AI Security Architect — technical AI risk analysis with executive business context. Open source."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "OrthoSec" }]
keywords = ["ai-security", "llm-security", "ai-spm", "owasp-llm", "mitre-atlas", "ai-governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core scan + report path is STDLIB ONLY — installs and runs with zero deps.
dependencies = []

[project.optional-dependencies]
# Executive narrative / free-form Q&A layer (grounded on deterministic findings).
intel = ["anthropic>=0.40"]
# Prettier console output; core falls back to plain text without it.
pretty = ["rich>=13"]
# Precise JavaScript (.js) analysis via AST; without [ts], TS/JSX falls back to regex.
js = ["esprima>=4.0"]
# Precise TypeScript / JSX (.ts/.tsx/.jsx) analysis via tree-sitter.
ts = ["tree-sitter>=0.21", "tree-sitter-typescript>=0.21"]
# Precise Go (.go) analysis via tree-sitter.
go = ["tree-sitter>=0.21", "tree-sitter-go>=0.21"]
# Precise Java (.java) analysis via tree-sitter.
java = ["tree-sitter>=0.21", "tree-sitter-java>=0.21"]
# Precise Kotlin (.kt) analysis via tree-sitter.
kotlin = ["tree-sitter>=0.21", "tree-sitter-kotlin>=1.1"]
# Precise C# (.cs) analysis via tree-sitter.
csharp = ["tree-sitter>=0.21", "tree-sitter-c-sharp>=0.21"]
# Precise Ruby (.rb) analysis via tree-sitter.
ruby = ["tree-sitter>=0.21", "tree-sitter-ruby>=0.21"]
# Precise PHP (.php) analysis via tree-sitter.
php = ["tree-sitter>=0.21", "tree-sitter-php>=0.22"]
dev = ["pytest>=8", "anthropic>=0.40", "rich>=13", "esprima>=4.0",
       "tree-sitter>=0.21", "tree-sitter-typescript>=0.21", "tree-sitter-go>=0.21",
       "tree-sitter-java>=0.21", "tree-sitter-kotlin>=1.1", "tree-sitter-c-sharp>=0.21",
       "tree-sitter-ruby>=0.21", "tree-sitter-php>=0.22"]

[project.scripts]
orthosec = "orthosec.cli:main"

[project.urls]
Homepage = "https://github.com/cloudivian-org/OrthoSec"
Repository = "https://github.com/cloudivian-org/OrthoSec"
Issues = "https://github.com/cloudivian-org/OrthoSec/issues"
Changelog = "https://github.com/cloudivian-org/OrthoSec/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["orthosec*"]

[tool.setuptools.package-data]
orthosec = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
